# hpffp-solutions

./: README.md
ch10/: ch_ex.hs  db_exercise.hs  ex.hs
ch11/: exercises.hs
ch12/: exercises.hs
ch13/: exercises.hs
ch7/: Chap7ArtfulDodgy.hs
cipher/: Cipher.hs
extra/: trainspeed.hs
extra/monopoly-dice/: README.md  monopoly-dice.cabal  monopoly_dice.py
extra/monopoly-dice/exe/: Main.hs
extra/monopoly-dice/src/: Fraction.hs  Main.hs
hangman/: README.md  hangman.cabal
hangman/src/: Main.hs
