name:                hangman
version:             0.1.0.0
synopsis:            Hangman 
description:         Follow-along tutorial project from the Haskell Book
homepage:            https://github.com/vimalearnest/hpffp-solutions
license:             BSD3
license-file:        LICENSE
--author:              
--maintainer:          
--copyright:           
category:            game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010

