name:                monopoly-dice
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/vimalearnest/hpffp-solutions
--license:             
--license-file:      
author:              sgibber2018
maintainer:          sgibber2018@gmail.com
--copyright:         
--category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monopoly-dice
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random

